added adventures.pdf modified code/jhed.tex added fonts/EBGaramond-Bold.ttf added fonts/EBGaramond-BoldItalic.ttf added fonts/EBGaramond-ExtraBold.ttf added fonts/EBGaramond-ExtraBoldItalic.ttf added fonts/EBGaramond-Italic.ttf added fonts/EBGaramond-Medium.ttf added fonts/EBGaramond-MediumItalic.ttf added fonts/EBGaramond-Regular.ttf added fonts/EBGaramond-SemiBold.ttf added fonts/EBGaramond-SemiBoldItalic.ttf modified jhed-wasteland/adventures.md added pbcopy

--- a/code/jhed.tex
+++ b/code/jhed.tex
@@ -1,7 +1,16 @@
-% This is jhed.tex without the documentclass
+% Use fontspec package
+\usepackage{fontspec}
 
-\usepackage[left=1in, right=1in, top=1in, bottom=1in]{geometry}
+% Set the main font to EB Garamond using the fonts in the local project folder
+\setmainfont[
+  Path = ./fonts/,                   % Path to the fonts folder in your project
+  UprightFont = {EBGaramond-Regular.ttf},         % Regular variant
+  BoldFont = {EBGaramond-Bold.ttf},               % Bold variant
+  ItalicFont = {EBGaramond-Italic.ttf},           % Italic variant
+  BoldItalicFont = {EBGaramond-BoldItalic.ttf},   % BoldItalic variant
+]{EB Garamond}
+
+% Adjust margins and other settings
+\usepackage[left=0.5in, right=0.5in, top=0.5in, bottom=0.5in]{geometry}
 \usepackage{graphicx}
 \usepackage{amsmath}
-
-% Any other custom LaTeX settings go here
